deployment/webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webook
  template:
    metadata:
      labels:
        app: webook
    spec:
      containers:
      - name: webook
        image: kaijump/webook:v0.0.1
        ports:
          - containerPort: 8080
