deployment/webook-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-media-app-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-media-app-redis
  template:
    metadata:
      labels:
        app: social-media-app-redis
    spec:
      containers:
      - name: social-media-app-redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: redis
            containerPort: 6379
      restartPolicy: Always
