deployment/webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-media-app-mysql
spec:
  type: LoadBalancer
  selector:
    app: social-media-app-mysql
  ports:
    - protocol: TCP
      nodePort: 30006
      port: 3306
      targetPort: 3306
