deployment/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-media-app-redis
spec:
  type: NodePort
  selector:
    app: social-media-app-redis
  ports:
    - protocol: TCP
      nodePort: 30007
      port: 6379
      targetPort: 6379
