deployment/webook-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: social-media-app
  spec:
    ingressClassName: nginx
    rules:
      - host: localhost
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: social-media-app
                  port:
                    number: 80
